# mcp-launchpad

./: .gitignore  CLAUDE.md  OAUTH_SECURITY_AUDIT.md  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml
docs/: mcp_launchpad_trace.md
mcp_launchpad/: __init__.py  cache.py  cli.py  config.py  config_preferences.py  connection.py  daemon.py  ipc.py  output.py  platform.py  search.py  session.py  state.py  suggestions.py
mcp_launchpad/oauth/: __init__.py  callback.py  discovery.py  flow.py  manager.py  pkce.py  store.py  tokens.py
tests/: conftest.py  test_cli.py  test_cli_auth.py  test_config.py  test_config_preferences.py  test_connection.py  test_daemon.py  test_error_handling.py  test_ipc.py  test_oauth_callback.py  test_oauth_discovery.py  test_oauth_flow.py  test_oauth_manager.py  test_oauth_pkce.py  test_oauth_store.py  test_oauth_tokens.py  test_output.py  test_platform.py  test_session.py  test_suggestions.py
